# nicp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake_modules/: FindEigen3.cmake  FindNicp.cmake  FindPwn.cmake
nicp/: CMakeLists.txt
nicp/nicp/: CMakeLists.txt  Doxyfile  aligner.cpp  aligner.h  alignernn.cpp  alignernn.h  alignerprojective.cpp  alignerprojective.h  bm_defs.h  bm_se3.h  cloud.cpp  cloud.h  correspondencefinder.cpp  correspondencefinder.h  correspondencefindernn.cpp  correspondencefindernn.h  correspondencefinderprojective.cpp  correspondencefinderprojective.h  cylindricalpointprojector.cpp  cylindricalpointprojector.h  definitions.cpp  definitions.h  depthimageconverter.cpp  depthimageconverter.h  depthimageconverterintegralimage.cpp  depthimageconverterintegralimage.h  gaussian.h  gaussian3.cpp  gaussian3.h  homogeneousvector4f.h  imageutils.cpp  imageutils.h  informationmatrix.h  informationmatrixcalculator.cpp  informationmatrixcalculator.h  linearizer.cpp  linearizer.h  merger.cpp  merger.h  multipointprojector.cpp  (+24 more)
nicp/nicp_conf/: gicp_eth_kinect.conf  ndt_eth_kinect.conf  ndt_eth_laser.conf  nicp_eth_kinect_incremental.conf  nicp_eth_laser_nscale_33.conf  nicp_eth_laser_nscale_66.conf
nicp/nicp_evaluation/: CMakeLists.txt  image_view.cpp  image_view.h  kinfu_eth_kinect_evaluate.cpp  nicp_eth_kinect_estimate_visualizer.cpp  nicp_eth_kinect_evaluate.cpp  nicp_eth_laser_estimate_visualizer.cpp  nicp_eth_laser_evaluate.cpp  nicp_generate_cropped_associations.cpp  nicp_incremental_eth_kinect_evaluate.cpp  nicp_kinfu_tracker.h  nicp_pomerleau2munich.cpp
nicp/nicp_evaluation/results/: icra2015_results.ods
nicp/nicp_evaluation/scripts/: evaluate_rpe.py
nicp/nicp_test/: CMakeLists.txt  nicp_cloud2spherical.cpp
nicp/nicp_viewer/: CMakeLists.txt  drawable.cpp  drawable.h  drawable_cloud.cpp  drawable_cloud.h  drawable_correspondences.cpp  drawable_correspondences.h  drawable_covariances.cpp  drawable_covariances.h  drawable_normals.cpp  drawable_normals.h  drawable_points.cpp  drawable_points.h  drawable_trajectory.cpp  drawable_trajectory.h  drawable_transform_covariance.cpp  drawable_transform_covariance.h  drawable_uncertainty.cpp  drawable_uncertainty.h  gl_parameter.cpp  gl_parameter.h  gl_parameter_cloud.cpp  gl_parameter_cloud.h  gl_parameter_correspondences.cpp  gl_parameter_correspondences.h  gl_parameter_covariances.cpp  gl_parameter_covariances.h  gl_parameter_normals.cpp  gl_parameter_normals.h  gl_parameter_points.cpp  gl_parameter_points.h  gl_parameter_trajectory.cpp  gl_parameter_trajectory.h  gl_parameter_transform_covariance.cpp  gl_parameter_transform_covariance.h  gl_parameter_uncertainty.cpp  gl_parameter_uncertainty.h  imageview.cpp  imageview.h  nicp_aligner_gui.cpp  (+10 more)
pwn/: CMakeLists.txt
pwn/pwn/: CMakeLists.txt  Doxyfile  aligner.cpp  aligner.h  bm_defs.h  bm_se3.h  cloud.cpp  cloud.h  correspondencefinder.cpp  correspondencefinder.h  cylindricalpointprojector.cpp  cylindricalpointprojector.h  definitions.cpp  definitions.h  depthimageconverter.cpp  depthimageconverter.h  depthimageconverterintegralimage.cpp  depthimageconverterintegralimage.h  gaussian.h  gaussian3.cpp  gaussian3.h  homogeneousvector4f.h  imageutils.cpp  imageutils.h  informationmatrix.h  informationmatrixcalculator.cpp  informationmatrixcalculator.h  linearizer.cpp  linearizer.h  merger.cpp  merger.h  multipointprojector.cpp  multipointprojector.h  parallelcylindricalpointprojector.cpp  parallelcylindricalpointprojector.h  pinholepointprojector.cpp  pinholepointprojector.h  pointaccumulator.h  pointintegralimage.cpp  pointintegralimage.h  (+17 more)
pwn/pwn_conf/: gicp_eth_laser.conf  kinfu_eth_kinect.conf  kinfu_munich_fr1.conf  ndt_eth_kinect.conf  ndt_eth_laser.conf  ndt_munich_fr1.conf  nicp_eth_kinect.conf  nicp_eth_kinect_estimate_visualization.conf  nicp_eth_laser.conf  nicp_eth_laser_estimate_visualization.conf  pwn_aligner_1_1.conf  pwn_aligner_1_4.conf  pwn_eth_hauptgebaude.conf  pwn_eth_kinect.conf  pwn_eth_stairs.conf  pwn_munich_fr1.conf  pwn_tracker_eth_kinect.conf
pwn/pwn_evaluation/: CMakeLists.txt  image_view.cpp  image_view.h  kinfu_eth_kinect_evaluate.cpp  ndt_eth_kinect_evaluate.cpp  nicp_eth_kinect_estimate_visualizer.cpp  nicp_eth_kinect_evaluate.cpp  nicp_eth_laser_estimate_visualizer.cpp  nicp_eth_laser_evaluate.cpp  nicp_incremental_eth_kinect_evaluate.cpp  pwn_generate_cropped_associations.cpp  pwn_kinfu_tracker.cpp  pwn_pomerleau2munich.cpp
pwn/pwn_evaluation/scripts/: format_morphing.sh  run_eth_kinect_experiments.sh
pwn/pwn_fr1_eth_evaluation/: CMakeLists.txt  gicp_munich_evaluate.cpp  kinfu_munich_evaluate.cpp  ndt_munich_evaluate.cpp  nicp_eth_laser_evaluate.cpp  nicp_scene_tracker_app.cpp  nicp_tracker_app.cpp  pwn_eth_evaluate.cpp  pwn_generate_munich_associations.cpp  pwn_kinfu_tracker.h  pwn_munich_evaluate.cpp
pwn/pwn_viewer/: CMakeLists.txt  drawable.cpp  drawable.h  drawable_cloud.cpp  drawable_cloud.h  drawable_correspondences.cpp  drawable_correspondences.h  drawable_covariances.cpp  drawable_covariances.h  drawable_normals.cpp  drawable_normals.h  drawable_points.cpp  drawable_points.h  drawable_trajectory.cpp  drawable_trajectory.h  drawable_transform_covariance.cpp  drawable_transform_covariance.h  drawable_uncertainty.cpp  drawable_uncertainty.h  gl_parameter.cpp  gl_parameter.h  gl_parameter_cloud.cpp  gl_parameter_cloud.h  gl_parameter_correspondences.cpp  gl_parameter_correspondences.h  gl_parameter_covariances.cpp  gl_parameter_covariances.h  gl_parameter_normals.cpp  gl_parameter_normals.h  gl_parameter_points.cpp  gl_parameter_points.h  gl_parameter_trajectory.cpp  gl_parameter_trajectory.h  gl_parameter_transform_covariance.cpp  gl_parameter_transform_covariance.h  gl_parameter_uncertainty.cpp  gl_parameter_uncertainty.h  imageview.cpp  imageview.h  opengl_primitives.cpp  (+10 more)
